Bug 1133732. Make button box frames listen for blurs so they de-activate on blur. r=smaug