layout/xul/nsButtonBoxFrame.h
@@ -15,14 +15,17 @@ public:
 
   friend nsIFrame* NS_NewButtonBoxFrame(nsIPresShell* aPresShell);
 
-  explicit nsButtonBoxFrame(nsStyleContext* aContext)
-    :nsBoxFrame(aContext, false) {
-    UpdateMouseThrough();
-  }
+  explicit nsButtonBoxFrame(nsStyleContext* aContext);
+
+  virtual void Init(nsIContent*       aContent,
+                    nsContainerFrame* aParent,
+                    nsIFrame*         aPrevInFlow) override;
 
   virtual void BuildDisplayListForChildren(nsDisplayListBuilder*   aBuilder,
                                            const nsRect&           aDirtyRect,
                                            const nsDisplayListSet& aLists) override;
+
+  virtual void DestroyFrom(nsIFrame* aDestructRoot) override;
 
   virtual nsresult HandleEvent(nsPresContext* aPresContext, 
                                mozilla::WidgetGUIEvent* aEvent,
@@ -31,6 +34,8 @@ public:
   virtual void MouseClicked(nsPresContext* aPresContext,
                             mozilla::WidgetGUIEvent* aEvent)
   { DoMouseClick(aEvent, false); }
+
+  void Blurred();
 
 #ifdef DEBUG_FRAME_DUMP
   virtual nsresult GetFrameName(nsAString& aResult) const override {
@@ -44,6 +49,27 @@ public:
    */
   void DoMouseClick(mozilla::WidgetGUIEvent* aEvent, bool aTrustEvent);
   void UpdateMouseThrough() override { AddStateBits(NS_FRAME_MOUSE_THROUGH_NEVER); }
+
+private:
+  class nsButtonBoxListener final : public nsIDOMEventListener
+  {
+  public:
+    explicit nsButtonBoxListener(nsButtonBoxFrame* aButtonBoxFrame) :
+      mButtonBoxFrame(aButtonBoxFrame)
+      { }
+
+    NS_IMETHOD HandleEvent(nsIDOMEvent* aEvent) override;
+
+    NS_DECL_ISUPPORTS
+
+  private:
+    friend class nsButtonBoxFrame;
+    virtual ~nsButtonBoxListener() { }
+    nsButtonBoxFrame* mButtonBoxFrame;
+  };
+
+  nsRefPtr<nsButtonBoxListener> mButtonBoxListener;
+  bool mIsHandlingKeyEvent;
 }; // class nsButtonBoxFrame
 
 #endif /* nsButtonBoxFrame_h___ */
